Fix some minor UI defects, inluding senator portraits (#41)
* Use h1 to h3 correctly to expose document structure

* UI improvements

* Fix pixel misalignment issue

* Actually fix the pixel misalignment issue

* Fix the portraits for real this time

* Fix dialogs and account page

--- a/frontend/src/components/Senator/SenatorPortrait.css
+++ b/frontend/src/components/Senator/SenatorPortrait.css
@@ -1,62 +1,54 @@
-figure.senator {
+a.senator-portrait:focus {
+  outline-offset: 1px;
+  outline: solid 3px var(--highlight-color);
+}
+
+.senator-portrait figure {
+  box-sizing: border-box;
   width: 80px;
   height: 80px;
+  background-color: var(--primary-color);
 
-  /* Override default `figure` margins */
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   margin-block-start: 0;
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
 }
-dialog.senator figure.senator {
-  width: 76px;
-  height: 76px;
+a.senator-portrait:focus figure {
+  outline: solid 1px var(--primary-color);
 }
 
-figure.senator>a {
-  display: block;
-  position: relative;
-  width: 76px;
-  height: 76px;
-  overflow: hidden;
-  border: solid 2px var(--primary-color);
-}
-figure.senator>div {
-  position: relative;
-  width: 76px;
-  height: 76px;
-  overflow: hidden;
-  border: none;
-}
-
-figure.senator>a:focus {
-  margin: -1px;
-  border: solid 3px var(--primary-color);
-  outline: solid 3px var(--highlight-color);
-  outline-offset: 0;
-}
-dialog.senator figure.senator>a:focus {
-  margin: 0;
-  outline: none;
-}
-
-figure.senator .picture {
-  position: absolute;
-  z-index: 2;
-}
-
-figure.senator .major-office-icon {
-  position: absolute;
-  z-index: 3;
-  top: 46px;
-  left: -1px;
-  height: 30px;
-  width: 30px;
-}
-
-figure.senator .faction-leader {
+.senator-portrait figure img.picture {
   position: absolute;
   z-index: 1;
-  top: 3px;
-  left: 3px;
+  width: 72px;
+  height: 72px;
+}
+
+.senator-portrait figure .bg {
+  position: absolute;
+  height: 73px;
+  width: 73px;
+}
+
+.senator-portrait figure img.faction-leader {
+  position: absolute;
+  top: 5px;
+  box-sizing: border-box;
+  width: 70px;
+}
+
+.senator-portrait figure img.major-office-icon {
+  position: absolute;
+  left: 2px;
+  bottom: 2px;
+  z-index: 2;
+  box-sizing: border-box;
+  height: 30px;
+  width: 30px;
 }
